enum TestEnum {
    ENUMERATOR1 = 1,
    ENUMERATOR2 = 2
}
