namespace * thryft.util

struct DateTime {
    required i64 timestamp_ms;
}
