namespace java org.thryft.protocol.test

enum ProtocolTestEnum {
    ENUMERATOR1 = 1,
    ENUMERATOR2 = 2
}
