struct TestStruct {
    1:double dfield;
}